--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+:root {
+    --main-color: #fff;
+}
 @font-face {
     font-family: "Roboto";
     src: url("../fonts/Roboto-Regular.ttf");
@@ -5,8 +8,83 @@
 body {
     font-family: 'Roboto', Arial, sans-serif;
 }
+.section {
+    display: flex;
+    justify-content: center;
+}
+.wrap {
+    max-width: 1340px;
+    width: 80%;
+}
 .title {
     font-weight: bold;
-    font-size: 24px;
-    color: red;
+    font-size: 20px;
+}
+.btn {
+    padding: 8px 24px;
+    font-size: 15px;
+    box-sizing: border-box;
+    outline: none;
+    color: var(--main-color);
+    background: rgba(0,0,0,0);
+    border: 1px solid var(--main-color);
+    transition: .3s linear;
+    cursor: pointer;
+}
+.btn:hover {
+    background: var(--main-color);
+    color: #323232;
+}
+
+.section-main {
+    position: relative;
+    height: 100vh;
+    min-height: 500px;
+    color: var(--main-color);
+}
+.section-main .title {
+    margin-top: 35vh;
+    font-size: 40px;
+}
+.section-main p {
+    margin-top: 40px;
+    line-height: 20px;
+    font-size: 15px;
+}
+.section-main .btn {
+    margin-top: 40px;
+}
+.section-main_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../img/main-back.jpg') center center no-repeat;
+    background-size: cover;
+    -webkit-filter: blur(7px);
+    filter: blur(7px);
+    z-index: 1;
+}
+.section-main_shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+}
+
+.section-blocks {
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 40px 0;
+    background: #fff; 
+}
+.block {
+    box-shadow: 0 0 3px 3px rgba(0,0,0,.3);
+    width: 20%;
+    height: 200px;
 }
